<resources>
    <string name="app_name">微部落</string>
    <string name="hub_summary_title">微部落</string>
    <string name="hub_category_title">频道</string>
    <string name="hub_tribe_title">部落</string>
    <string name="msg_at_me">\@我</string>
    <string name="msg_title_friend">好友列表</string>
    <string name="msg_title_recognize">可能认识</string>
    <string name="msg_title_search">搜索添加</string>
    <string name="msg_tab_friend">好友</string>
    <string name="msg_tab_group">圈子</string>
    <string name="msg_tab_me">我</string>
    <string name="ok_button">OK</string>
    <string name="msg_float_button_before">上一条微博</string>
    <string name="msg_float_button_next">下一条微博</string>
    <string name="msg_last_item">已到最后一条</string>
    <string name="msg_first_item">已到第一条</string>
    <string name="msg_add_group">创建圈子</string>
    <string name="msg_focus">关注</string>
    <string name="msg_funs">粉丝</string>
    <string name="msg_weibo">微博</string>
    <string name="msg_file_downloading">正在准备下载</string>
    <string name="msg_file_has_downloading">文件已在下载中</string>
    <string name="msg_search_title">搜索</string>
    <string name="msg_search_user">搜用户</string>
    <string name="msg_search_weibo">搜微博</string>
    <string name="msg_file_size">大小：%1$s</string>
    <string name="release_weibo_title">发微博</string>
    <string name="release_weibo_btn">发布</string>
    <string name="release_input_desc">请输入发布内容</string>
    <string name="msg_release_not_empty">发布内容不能为空</string>
    <string name="msg_send_reply_success">发布成功</string>
    <string name="msg_reply_success">回复成功</string>
    <string name="msg_reply_failure">回复失败，请重试</string>
    <string name="write_label_take_a_picture">相机拍摄</string>
    <string name="write_label_choose_a_picture">手机相册</string>
    <string name="write_label_insert_picture">插入图片</string>
    <string name="too_more_words">请保持字数在140字内</string>
    <string name="menu_about">关于微部落</string>
    <string name="abount_info">软件版本：1.0 \n\n 微部落是一款集合新浪微博、腾讯微博、网易微博等多家信息内容的资讯平台。以独特的图片浏览模式结合传统的微博阅读习惯，并将内容以频道分类的方式展现给用户。用户可以自己选择相应的内容频道了解当前最热的话题内容，关注最新的时事动态。此版本适用于Android平台1.6及以上的手机。本软件下载、安装完全免费，使用过程中产生的数据流量费用，由运营商收取。\n\n 联系我们：weibuluo@kindroid.com \n\n 官方网站：http://www.weibuluo.cn</string>
    <string name="msg_at_me_myself_phone">手机：</string>
    <string name="msg_at_me_myself_certificate">已认证</string>
    <string name="msg_at_me_myself_un_certificate">未认证</string>
    <string name="msg_at_me_myself_binded">已绑定</string>
    <string name="msg_at_me_myself_un_binded">未绑定</string>
    <string name="msg_at_me_myself_mail">邮箱：</string>
    <string name="msg_at_me_myself_sina_weibo">新浪微博：</string>
    <string name="msg_gender_woman">女</string>
    <string name="msg_gender_man">男</string>
    <string name="msg_gender_secret">性别保密</string>
    <string name="msg_gender_secret_modify">保密</string>
    <string name="msg_modify_failure">修改失败，请稍后重试</string>
    <string name="msg_binding_email_title">邮箱绑定</string>
    <string name="msg_binding_email_message">请输入您要绑定的邮箱</string>
    <string name="msg_email_sample_message">soso@msn.com</string>
    <string name="msg_binding_btn">绑定</string>
    <string name="msg_email_error">邮箱格式不正确</string>
    <string name="msg_email_empty">邮箱不能为空</string>
    <string name="msg_login_email_to_activate">请登录邮箱激活</string>
    <string name="msg_binding_failure_try_again">绑定失败，请重试</string>
    <string name="quit_app_tips">再按一次将退出程序</string>
    <string name="msg_at_me_myself_modify_title">修改资料</string>
    <string name="msg_at_me_myself_modify_ch">（点击修改）</string>
    <string name="msg_at_me_myself_logout">注销</string>
    <string name="msg_at_me_myself_nick_name">昵称：</string>
    <string name="msg_at_me_myself_pwd">密码：******</string>
    <string name="msg_at_me_myself_gender">性别：</string>
    <string name="msg_at_me_myself_region">地区：</string>
    <string name="msg_modify_nick_name_message">请填写新昵称</string>
    <string name="msg_modify_gender_message">请选择</string>
    <string name="msg_modify_nick_name_title">修改昵称</string>
    <string name="msg_modify_gender_title">修改性别</string>
    <string name="msg_nick_name_not_empty">昵称不能为空</string>
    <string name="msg_add_group_title">添加圈子</string>
    <string name="msg_add_group_message">请填写圈子名称</string>
    <string name="msg_add_group_confirm">确定</string>
    <string name="msg_add_group_cancel">取消</string>
    <string name="msg_add_group_not_empty">圈子名称不能为空</string>
    <string name="msg_add_group_failure">添加失败，请重试</string>
    <string name="msg_at_me_secret_message">私信</string>
    <string name="msg_topic_title">话题</string>
    <string name="msg_send_reply_failure">发布失败，请稍后再试</string>
    <string name="home_news_title">新闻</string>
    <string name="feedback_input_desc">请输入转发内容</string>
    <string name="msg_forward_success">转发成功</string>
    <string name="msg_forward_weibo">同时转发到微博</string>
    <string name="msg_original_content">原文：%1$s</string>
    <string name="home_forward_title">转发</string>
    <string name="home_reply_title">回复</string>
    <string name="home_comment_title">评论</string>
    <string name="home_laugh_title">搞笑</string>
    <string name="home_beauty_title">美女</string>
    <string name="home_constellation_title">星座</string>
    <string name="home_recreation_title">娱乐</string>
    <string name="home_movie_title">电影</string>
    <string name="home_sports_title">体育</string>
    <string name="home_technology_title">科技</string>
    <string name="home_game_title">游戏</string>
    <string name="home_fashion_title">时尚</string>
    <string name="home_streettake_title">街拍</string>
    <string name="home_quotation_title">语录</string>
    <string name="home_pet_title">宠物</string>
    <string name="home_car_title">汽车</string>
    <string name="home_english_title">英语</string>
    <string name="home_travel_title">旅行</string>
    <string name="home_business_title">商业</string>
    <string name="home_originality_title">创意</string>
    <string name="home_wallpaper_title">壁纸</string>
    <string name="msg_keyword_not_empty">搜索内容不能为空</string>
    <string name="msg_search_result_empty">找不到搜索内容，请尝试其它关键字</string>
    <string name="msg_collection_success">收藏成功</string>
    <string name="msg_collection_failure">收藏失败，请重试</string>
    <string name="home_link_title">链接内容</string>
    <string name="msg_sdcard_not_exist">SD卡不可用</string>
    <string name="msg_save_success">图片保存成功</string>
    <string name="msg_save_failure">图片保存失败，请重试</string>
    <string name="msg_net_work_error">网络不可用</string>
    <string name="msg_mail">email</string>
    <string name="msg_mail_body"> 来自微部落：http://www.weibuluo.cn</string>
    <string name="msg_mail_subject">微部落分享</string>
    <string name="home_ringtone_title">铃声</string>
    <string name="msg_loading">正在加载...</string>
    <string name="msg_downloading">正在下载</string>
    <string name="msg_downloaded">已下载</string>
    <string name="msg_cached">已缓存</string>
    <string name="atme_left_title">发布</string>
    <string name="tribe_dynamic">部落动态</string>
    <string name="hot_dynamic">热点动态</string>
    <string name="msg_sample">功呖可爱车匪路霸朝左晨跑</string>
    <string name="msg_comments">好友的评论</string>
    <string name="msg_forwards_count">转发（%1$s）</string>
    <string name="msg_comments_count">评论（%1$s）</string>
    <string name="msg_status_400">%s 发生400错误</string>
    <string name="msg_status_other">%s 下载失败</string>
    <string name="msg_status_200">%s 下载成功</string>
    <string name="msg_status_500">服务器错误</string>
    <string name="msg_status_404">%s 文件不存在</string>
    <string name="user_login_title">登录</string>
    <string name="user_login_user_name">部落号:</string>
    <string name="user_login_password">密码:</string>
    <string name="user_login_repassword">确认密码:</string>
    <string name="user_login_success">登录成功</string>
    <string name="option_infomation">选填资料</string>
    <string name="user_register">注册</string>
    <string name="user_forgetpwd">找回密码</string>
    <string name="user_valid_msg">用户名或密码错误</string>
    <string name="user_register_title">注册</string>
    <string name="user_register_success">注册成功</string>
    <string name="user_register_username_duplicate">用户名已占用</string>
    <string name="user_register_username_format">用户名格式错误</string>
    <string name="user_register_email_format">邮箱格式错误</string>
    <string name="user_register_password">密码长度六位或者八位</string>
    <string name="user_register_phone_format">手机格式错误</string>
    <string name="user_register_repassword">确认密码格式错误</string>
    <string name="user_register_repassword_not_match">两次输入密码不一致</string>
    <string name="user_register_title_first">注册信息</string>
    <string name="user_register_telephone">手机号码:</string>
    <string name="user_register_email">邮箱:</string>
    <string name="user_register_email_used">邮箱已经被占用</string>
    <string name="user_register_phone_used">手机已经被占用</string>
    <string name="progress_message">请稍等...</string>
    <string name="sina_auth_failure">授权失败,请重试</string>
    <string name="user_register_connect_error">操作错误,请重试</string>
    <string name="user_modify_pwd_title">修改密码</string>
    <string name="user_modify_old_pwd">旧密码:</string>
    <string name="user_modify_new_pwd">新密码:</string>
    <string name="user_modify_submit">提交</string>
    <string name="user_register_nickname_title">设置昵称</string>
    <string name="user_register_nickname_input">请输入微部落昵称:</string>
    <string name="find_friend_by_contact">寻找通讯录好友</string>
    <string name="user_finish">完成</string>
    <string name="user_register_nickname">昵称:</string>
    <string name="login_welcome">欢迎您来到微部落!</string>
    <string name="register_welcome">请使用正确的信息注册</string>
    <string name="forget_pwd_label">忘记密码?</string>
    <string name="user_register_nickname_valid">昵称在4位到20位长度</string>
    <string name="user_login_other_way">你可以选择新浪微博帐号登录</string>
    <string name="user_login_hit">请输入邮箱</string>
    <string name="user_register_tip1">请输入正确的手机号码或邮箱地址</string>
    <string name="user_register_tip2">手机号码注册:系统会发送密码到手机</string>
    <string name="user_register_tip3">邮箱地址注册:系统会发送认证邮件到邮箱</string>
    <string name="user_forget_pwd_tip">密码不见了?可以通过以下途径找回密码</string>
    <string name="user_forget_pwd_tip1">请输入注册时预留的手机号码:</string>
    <string name="user_forget_pwd_tip2">请输入注册时预留的邮箱:</string>
    <string name="dialog_user_tip">下次进入微部落时不再提示此提示框</string>
    <string name="dialog_user_tip1">你可以选择\n立刻注册成为 \n微部落的一员!</string>
    <string name="dialog_user_tip2">也可以在微部落\n里面随意逛\n逛!</string>
    <string name="user_edit_pwd_oldpwd_msg">旧密码格式错误</string>
    <string name="user_edit_pwd_newpwd_msg">新密码格式错误</string>
    <string name="user_edit_pwd_confirmpwd_msg">确认密码格式错误</string>
    <string name="user_edit_pwd_success">修改密码成功</string>
    <string name="user_register_phone_email_valid">手机或邮箱格式不正确</string>
    <string name="user_update_avatar_success">更新头像成功</string>
    <string name="user_find_pwd_by_email_success">找回成功,请查收邮箱</string>
    <string name="user_find_pwd_by_email_fail">操作失败,请重试</string>
    <string name="user_find_pwd_by_email_inactive">邮箱未激活</string>
    <string name="user_find_pwd_by_email_not_exist">邮箱不存在</string>
    <string name="user_alert_pwd_old">原密码格式不正确</string>
    <string name="user_alert_pwd_inconrect">旧密码错误</string>
    <string name="user_no_login_tips">您还没有登录</string>
    <string name="login_other_way">也可以选择</string>
    <string name="follow_success">关注成功</string>
    <string name="follow_failure">关注失败</string>
    <string name="cancel_follow_success">取消关注成功</string>
    <string name="cancel_follow_failure">取消关注失败</string>
    <string name="fans_count">%d粉丝</string>
    <string name="user_favorite">收藏</string>
    <string name="user_topic">话题</string>
   	<string name="square_time_hour">%d小时前</string>
	<string name="square_time_half_hour">半小时前</string>
	<string name="square_time_minutus">%d分钟前</string>
	<string name="square_time_second">%d秒钟前</string>
	<string name="square_time_just">刚刚</string>
	<string name="square_time_yesterday">昨天</string>
	<string name="square_time_day_before_yesterday">前天</string>
	<string name="square_time_day">%d天前</string>
</resources>