<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:id="@+id/addGroupBgLayout"
  android:background="@drawable/pop_up_dialog_bg">
    <TextView 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/msg_add_group_title"
    	android:textColor="@color/black"
    	android:textSize="18sp"
    	android:layout_gravity="center_horizontal"
    	android:layout_marginTop="15dp"/>
    <TextView 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/msg_add_group_message"
    	android:textColor="@color/black"
    	android:textSize="13sp"
    	android:layout_gravity="left"
    	android:paddingLeft="8dp"
    	android:layout_marginTop="13dp"/>
    <EditText 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:id="@+id/groupNameEditText"
    	android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:textSize="12sp"
		android:layout_marginLeft="12dp"
		android:singleLine="true"
		android:maxWidth="280dp"
		android:layout_marginTop="3dp"
		android:layout_gravity="left"
		android:background="@drawable/edit_text_bg"/>
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="20dp">
		<Button 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/confirmButton"
			android:text="@string/msg_add_group_confirm"
			android:textColor="@color/white"
			android:textSize="15sp"
			android:layout_marginRight="3dp"
			android:background="@drawable/dialog_button_red_bg"/>	
		<Button 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/cancelButton"
			android:text="@string/msg_add_group_cancel"
			android:textColor="@color/white"
			android:textSize="15sp"
			android:layout_marginLeft="3dp"
			android:background="@drawable/dialog_button_red_bg"/>	
	</LinearLayout>
</LinearLayout>
